--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1",
     "validator": "^13.11.0"
   }
 }
